Tentando rodar o redis

--- a/fatorial-with-cache/package.json
+++ b/fatorial-with-cache/package.json
@@ -2,7 +2,7 @@
   "name": "redis-fatorial",
   "version": "1.0.0",
   "description": "Fatorial with cache (redis)",
-  "main": "app.js",
+  "main": "server.js",
   "keywords": [
     "redis",
     "fatorial"
@@ -13,8 +13,10 @@
     "url": "https://alvarofpp.github.io/"
   },
   "dependencies": {
+    "core-util-is": "^1.0.2",
     "express": "^4.17.1",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "require-dir": "^1.2.0"
   },
   "scripts": {
     "start": "node app.js"
